--- a/styles.css
+++ b/styles.css
@@ -161,7 +161,7 @@ li {
 }
 
 .footer:after {
-    content: "2022 Reza Nopour, \a HTML and CSS by Albert Peiret on GitHub";
+    content: "2025 Ali Khoddoum, \a HTML and CSS by Albert Peiret on GitHub";
 }
 
 
